# AXDT

./: .gitignore  INITIAL_IDEA.md  LICENSE  README.md
WIP/: TODO.html  TODO.md  glossary.md  handoff-83b-container-measurement.md  handoff-hub-main-ref-protection.md  handoff-phase3-seedcopy-measurement.md  handoff-phase5-runtime-contract.md  handoff-phase6-enforcement-critical-paths.md  handoff-phase6-enforcement-response.md  handoff-review-report-skill.md  handoff-sot-readiness-crossphase.md  handoff-state-detection-redesign.md  pyproject.toml  workflow.md
WIP/adr/: 0001-maintainer-persistent-tmux-session.md  0002-no-separate-db-or-queue.md  0003-agent-communication-model.md  0004-report-to-progress-authority-flow.md  0005-agent-runner-composition-and-injected-backend.md  0006-git-isolation-via-local-bare-hub.md  0007-layered-enforcement.md  0008-git-host-abstraction.md  0008-test-design-as-sot-type.md  0009-sot-readiness-host-enforcement.md  0010-git-host-abstraction.md  0011-sot-authoring-role-model.md  0012-sot-item-declaration.md  0013-sot-pr-bundle-scope.md  0014-judgment-key-policy-epoch-and-rule-catalog.md  0015-base-rule-scope-classification.md  0016-hook-based-state-detection.md  0017-codex-role-via-profile-binding.md  0018-starting-state-via-runtime-seed.md  0019-state-file-value-equals-agentstate-value.md  0020-half-state-liveness-contract.md  _TEMPLATE.md
WIP/axdt/: __init__.py  __main__.py  cli.py
WIP/drafts/: adr-recording-rule-draft.md  b1-authoring-skill-draft.md  sot-lint-spec-draft.md
WIP/plans/: 2026-06-26-phase5-agent-runner.md  (+2 more)
(+184 files in other folders)
