[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "axdt"
version = "0.0.0"
description = "AXDT self-implementation (temporary WIP location)"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["axdt*"]

[tool.pytest.ini_options]
testpaths = ["axdt"]
addopts = "-q"
